# DouyinLiveRecorder

./: .dockerignore  .gitignore  DLR_MODULES_README.md  Dockerfile  LICENSE  README.md  README_PYPI.md  StopRecording.vbs  base-setup.sh  cookies.py  demo.py  do_bun.sh  docker-compose.yaml  dy_comment.py  ffmpeg_install.py  i18n.py  index.html  logger.py  main.py  msg_push.py  my_print.py  push_api.py  py_bun.sh  pyproject.toml  requirements.txt  service.bat  setup.py  spider.py  utils.py  video_monitor_upload.py  web_rid.py  webhook_msg_api.py  worker.py  x-bogus.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1.bug.yml  2.feature.yml  bug.yml  bug_en.yml  feature.yml  feature_en.yml  question.yml  question_en.yml
api/: convert.php  index.php
backup_config/: URL_config.ini_2023-10-02-16-25-20  URL_config.ini_2023-10-02-23-45-29  URL_config.ini_2023-10-03-14-17-25  URL_config.ini_2023-10-03-14-18-25  URL_config.ini_2023-10-03-17-14-49  URL_config.ini_2023-10-03-17-15-49  URL_config.ini_2023-10-03-17-16-49  URL_config.ini_2023-10-03-17-17-49  URL_config.ini_2023-10-04-17-28-53  URL_config.ini_2023-10-10-09-45-08  URL_config.ini_2023-10-12-14-00-48  URL_config.ini_2023-10-14-16-32-02  URL_config.ini_2023-10-14-17-08-15  URL_config.ini_2023-10-27-14-02-04  URL_config.ini_2023-11-08-21-30-54  URL_config.ini_2023-11-08-21-31-54  URL_config.ini_2024-01-16_14-25-07  URL_config.ini_2024-01-16_14-52-50  URL_config.ini_2024-01-16_18-16-37  config.ini_2023-10-02-16-25-20  config.ini_2023-10-03-10-40-04  config.ini_2023-10-10-18-36-59  config.ini_2023-10-12-13-59-31  config.ini_2023-10-12-14-00-48  config.ini_2023-10-12-14-01-56  config.ini_2023-10-12-14-40-44  config.ini_2023-10-12-18-20-45  config.ini_2023-10-14-22-32-59  config.ini_2024-01-16_14-52-50
config/: URL_config.ini  config.ini
douyinliverecorder/: __init__.py  initializer.py  logger.py  msg_push.py  proxy.py  room.py  spider.py  stream.py  utils.py  web_rid.py
dy/: dy.proto  dy.py  dy_live_api.py  dy_pb2.py  抖音礼物格式.json
src/: ab_sign.py  cookie_manager.py  dependency_checker.py  dlr_logger.py  logger.py  m3u8_manager.py  qos_selector.py  room.py  spider.py  stream.py  telegram_enhanced.py  utils.py
streamget/: logger.py  spider.py  stream.py  utils.py
(+17 files in other folders)
