[project]
name = "streamget"
version = "4.0.3"
description = "A simple and efficient tool to fetch live stream URLs from various platforms. Supports multiple platforms and easy integration."
authors = [{ name = "Hmily" }]
license = {text = "MIT"}
readme = "README_PYPI.md"
urls = {Repository = "https://github.com/ihmily/DouyinLiveRecorder"}
keywords = ["douyin", "youtube", "tiktok", "twitch", "live", "recorder"]
requires-python = ">=3.10,<4.0"

dependencies = [
    "requests>=2.31.0",
    "loguru>=0.7.3",
    "pycryptodome>=3.20.0",
    "distro>=1.9.0",
    "tqdm>=4.67.1",
    "httpx[http2]>=0.28.1",
    "PyExecJS>=1.5.1"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"